[package]
name = "rekt-recommender-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = "0.6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
bincode = "1"

luminair = { git = "https://github.com/gizatechxyz/LuminAIR.git", rev = "a6b5027" }
regex = "1"
rust-stemmers = "1"
stop-words = "0.8"

anyhow = "1"
thiserror = "1"
chrono = "0.4.41"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
